--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,9 @@ input {
   display: none;
 }
 
-button {
-  background-color: hotpink;
+#boton-mascota {
+  background-color: orange;
+  height: 40px;
   width: 500px;
   border: 2px solid black;
   margin: 20px;
