--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,16 @@ input:checked + label{
   align-items: center;
 }
 
+#ver-mapa {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#mapa {
+  border: 2px solid blueviolet;
+}
+
 @media (max-width: 860px) {
     .card-container  {
       flex-direction: column;
